packages/ui/src/styles/components/editorCanvas.sass
@import '../common'

.#{$cui-conf-globalPrefix}editorCanvas
	@extend %controlVariants

	--cui-editor-canvas-element-padding-bottom: calc(2 * var(--cui-gap-vertical))
	--cui-editor-canvas-element-padding-left: calc(3 * var(--cui-gap-horizontal))
	--cui-editor-canvas-element-padding-right: calc(3 * var(--cui-gap-horizontal))
	--cui-editor-canvas-element-padding-top: calc(2 * var(--cui-gap-vertical))

	border: var(--cui-control-border-width) solid var(--cui-color--lower)
	border-radius: var(--cui-control-border-radius)
	position: relative
	width: 100%

	*[contenteditable="true"]
		border-radius: var(--cui-control-border-radius)
		flex-grow: 1

	&:hover
		border-color: var(--cui-color--low)

	&:focus-within
		@extend %implementsCustomFocusEffects
		border-color: var(--cui-control-border-color)

	&.view-hovering-toolbar *[contenteditable="true"]
		padding-bottom: calc(56px + 2 * var(--cui-gap-vertical)) // TODO: Measure the hovoering container

	// TODO: Not ideal since `:focus-visible` would be good to use as well
	*[contenteditable="true"]:focus // << Fails on large editors
		@extend %implementsCustomFocusEffects
		box-shadow: 0 0 0 .2em var(--cui-control-border-color)

	&-canvas > [class^="cui-editor"]
		padding-bottom: var(--cui-editor-canvas-element-padding-bottom)
		padding-left: var(--cui-editor-canvas-element-padding-left)
		padding-right: var(--cui-editor-canvas-element-padding-right)
		padding-top: var(--cui-editor-canvas-element-padding-top)
		position: relative

	&-canvas > .#{$cui-conf-globalPrefix}editorBlock
		padding: 0

	&-canvas
		cursor: text
		display: flex
		min-height: 2em
		flex-direction: column

		$headingCounter: null
		@for $level from 1 through length($cui-editor-heading-counters)
			$counter-name: nth($cui-editor-heading-counters, $level)
			$headingCounter: $headingCounter unquote($counter-name)
		counter-reset: $headingCounter unquote($cui-editor-paragraph-counter)

		h1, h2, h3, h4, h5, h6
			margin: 0
		& > :first-child
			margin-top: 0
		& > :last-child
			margin-bottom: 0
		a
			color: $cui-color-blue

		ol + ul,
		ol + ol,
		ul + ul,
		ul + ol
			margin-top: .5em

		li
			& > p
				margin: 0

		code,
		em
			padding: em(2px) em(1px)

		code
			font-family: monospace
			background-color: $cui-color-gray-2

		em
			// TODO use a css var with a fallback
			background-color: lighten($cui-color-blue, 35)
			font-style: normal

		hr
			background-color: $cui-color-gray-2
			height: em(1px)
			margin: 0
			border: none

		::selection
			background-color: #BFE4FF

	&.view-large &-canvas
		min-height: 32em

	& > &-canvas &-canvas
		min-height: 1em
		padding: 0

	&.view-seamless
		box-shadow: none

	& &
		&:not(:first-child)
			margin-top: var(--cui-fieldContainer-separation)

